# Class-Planner

./: .gitignore  LICENSE  main.py  pyproject.toml
config/: definitions.py
src/: agents.py  pipeline_manager.py
src/prompts/: editing.editor.md  final_notes.teacher.md  final_notes.teacher.sl.md  notes.teacher.md  notes.teacher.sl.md  review.reviewer.md  review_summary.teacher.md  review_summary.teacher.sl.md  summary.teacher.md  summary.teacher.sl.md  system.editor.md  system.reviewer.md  system.teacher.md
